# wfplug-connect

./: meson.build
data/: meson.build
debian/: changelog  control  copyright  wfplug-connect.postinst
po/: POTFILES.in  ja.po  pl.po  pt_BR.po
src/: connect.c  connect.cpp  connect.h  connect.hpp  connect.xml  meson.build
