install_data('rpc-disabled.png', install_dir: get_option('datadir') / 'icons/hicolor/128x128/status')
install_data('rpc-enabled.png', install_dir: get_option('datadir') / 'icons/hicolor/128x128/status')
install_data('rpc-active.png', install_dir: get_option('datadir') / 'icons/hicolor/128x128/status')
